# data-hack-faker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml  python.yml
config/: __init__.py  config_parser.py
config/comany/: config.json
config/company/: config.json
config/customer/: config.json
config/employee/: config.json
config/order/: config.json
config/product/: config.json
configs/company/: config.json  default.json
configs/customer/: default.json
configs/employee/: default.json
configs/order/: config.json  default.json
configs/product/: default.json
src/data_hack_faker/: cli.py
src/data_hack_faker/config/: __init__.py  config_parser.py
src/data_hack_faker/config/product/: config.json
src/data_hack_faker/config_parser/: __init__.py  config_parser.py
src/data_hack_faker/dataclasses/: __init__.py  base_dataclass.py  company.py  customer.py  employee.py  order.py  person.py  product.py
src/data_hack_faker/factories/: __init__.py  base_factory.py  company_factory.py  customer_factory.py  employee_factory.py  order_factory.py  person_factory.py  product_factory.py
src/data_hack_faker/providers/: __init__.py  job_provider.py
src/data_hack_faker/sparktable/: spark_inference.py  utils.py
src/data_hack_faker/utils/: __init__.py  config_parser.py
tests/: test_company_factory.py  test_customer.py  test_customer_factory.py  test_employee_factory.py  test_generate_table.py  test_job_provider.py  test_order_factory.py  test_person.py  test_person_factory.py  test_product_factory.py
tests/factories_tests/: test_company_factory.py  test_customer_factory.py  test_employee_factory.py  test_product_factory.py
tests/pyspark_tests/: test_generate_table.py
